# frachter

./: .gitignore  Cargo.toml  README.md
js/: package.json  pnpm-lock.yaml  qr.js  qr.min.js  rollup.config.js
src/: bounded_body.rs  cleanup.rs  config.rs  jwt.rs  main.rs  middleware.rs  mutex.rs  serde_util.rs  transfer.rs
static/: index.css  index.html  index.js
